raffia/tests/error/scss/at-rule/error/incomplete-expression.snap
---
source: raffia/tests/error.rs
---
error: expect token `)`, but found `;`
  ┌─ incomplete-expression.scss:1:13
  │
1 │ @error("foo";
  │             ^


